--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div class="col-1 text-center">
               <img src="tisza.png" class="img-thumbnail">
           </div>
+          <h1 class="display-1">Minden időben tisza cipőben</h1>
           <div class="col-11 display-4">
           </div>
       </div>
@@ -35,15 +36,21 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Táskák</a>
           </li>
+          <li>
+            <a class="nav-link" href="#"></a>
+          </li>
         </ul>
       </nav>
 
       <!--Története-->
       <div>
-        <h2>Története</h2>
-        Thomas Bata az 1930-as években kívánt cipőgyárat létesíteni valahol Magyarországon. A helyszínt illetően a választása Martfűre esett, ahol vízi, közúti és vasúti csomópont található. A gyár területét 1939-ben vásárolta meg. A vállalat elődje Cikta Rt. néven kezdte a termelést, 1942-ben. A második világháború éveiben sok változás történt a vezetésben, melyek a termelést nem befolyásolták. A háborút követően a gyárnak nagy veszteségei voltak, gumitalpú cipők helyett fatalpúakat gyártottak. 1949 augusztusában az államosított Cikta Rt.-t Tisza Cipőgyár Nemzeti Vállalatra nevezték át.
-        Az 1950-60-as években a gyár főleg a magyarországi kereslet kielégítésére termelt, export csak a szocialista országokba történt. Nagy mennyiségben gyártottak bakancsokat a Honvédelmi és a Belügyminisztériumnak, illetve a Munkásőrségnek. 1970 decemberében a Tisza Cipőgyár beadta új logójának engedélyezési kérelmét, amelyet 1971 első hónapjaiban hagytak jóvá.
-        Ezt követően kezdődött meg a gyártása, mely sok fiatal kedvenc cipőjévé vált. A Tisza Cipőgyár sportcipő vonala meghozta a hozzá fűzött reményeket. 1971 májusától a németországi Adidas is a Tisza Cipőgyárral állíttatta elő a La Paz modellnévre hallgató futballcipőit. 
+      <h2 class="h2">Története</h2>
+
+      <p>Thomas Bata az 1930-as években kívánt cipőgyárat létesíteni valahol Magyarországon. A helyszínt illetően a választása Martfűre esett, ahol vízi, közúti és vasúti csomópont található. A gyár területét 1939-ben vásárolta meg. A vállalat elődje Cikta Rt. néven kezdte a termelést, 1942-ben. A második világháború éveiben sok változás történt a vezetésben, melyek a termelést nem befolyásolták. A háborút követően a gyárnak nagy veszteségei voltak, gumitalpú cipők helyett fatalpúakat gyártottak. 1949 augusztusában az államosított Cikta Rt.-t Tisza Cipőgyár Nemzeti Vállalatra nevezték át.</p> 
+
+      <p>Az 1950-60-as években a gyár főleg a magyarországi kereslet kielégítésére termelt, export csak a szocialista országokba történt. Nagy mennyiségben gyártottak bakancsokat a Honvédelmi és a Belügyminisztériumnak, illetve a Munkásőrségnek. 1970 decemberében a Tisza Cipőgyár beadta új logójának engedélyezési kérelmét, amelyet 1971 első hónapjaiban hagytak jóvá.
+      </p> 
+      <p>Ezt követően kezdődött meg a gyártása, mely sok fiatal kedvenc cipőjévé vált. A Tisza Cipőgyár sportcipő vonala meghozta a hozzá fűzött reményeket. 1971 májusától a németországi Adidas is a Tisza Cipőgyárral állíttatta elő a La Paz modellnévre hallgató futballcipőit. </p> 
         Tovább olvasom
     </div>
     
