--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p>Az 1950-60-as években a gyár főleg a magyarországi kereslet kielégítésére termelt, export csak a szocialista országokba történt. Nagy mennyiségben gyártottak bakancsokat a Honvédelmi és a Belügyminisztériumnak, illetve a Munkásőrségnek. 1970 decemberében a Tisza Cipőgyár beadta új logójának engedélyezési kérelmét, amelyet 1971 első hónapjaiban hagytak jóvá.
       </p> 
       <p>Ezt követően kezdődött meg a gyártása, mely sok fiatal kedvenc cipőjévé vált. A Tisza Cipőgyár sportcipő vonala meghozta a hozzá fűzött reményeket. 1971 májusától a németországi Adidas is a Tisza Cipőgyárral állíttatta elő a La Paz modellnévre hallgató futballcipőit. </p> 
-        Tovább olvasom
+      <a class="float-right" href="https://www.tiszacipo.hu/tortenet/">Tovább olvasom</a>
     </div>
     
     <!--Legnépszerűbb termékek-->
