megint eltuntek a fajlok...

--- a/index.html
+++ b/index.html
@@ -55,21 +55,37 @@
     </div>
     
     <!--Legnépszerűbb termékek-->
-        <h2>Legnépszerűbb termékek</h2>
-        <div>
-            <div>
-                <img src="ov.jpg" class="img-thumbnail">
-                <h6>Öv</h6>
-            </div>
-            <div>
-                <img src="compact.jpg" class="img-thumbnail">
-                <h6>Compact</h6>
-            </div>
-            <div>
-                <img src="pulover.jpg" class="img-thumbnail">
-                <h6>Pulóver</h6>
-            </div>
-        </div>
+    <h2>Legnépszerűbb termékek</h2>
+    <div>
+      <table>
+    <tr>
+    <div>
+      <td>
+        <img src="ov.jpg" class="img-thumbnail my-3" width="100%">
+        <h6 class="text-center">Öv</h6>
+      </td>
+    </div>
+    <div>
+      <td>
+        <img src="compact.jpg" class="img-thumbnail my-3" width="100%">
+        <h6 class="text-center">Compact</h6>
+      </td>
+    </div>
+    <div>
+      <td>
+        <img src="pulover.jpg" class="img-thumbnail my-3" width="100%" >
+        <h6 class="text-center">Pulóver</h6>
+      </td>
+    </div>
+    <div>
+      <td>
+        <img src="martfu.jpg" class="img-thumbnail my-3" width="100%">
+        <h6 class="text-center">Martfű</h6>
+      </td>
+    </div>
+    </tr>
+    </table>
+    </div>
         
         <!--Üzletek-->
         <h2>Üzletek (néhány)</h2>
