--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   </table>  
         <!--Lábléc-->
         <footer class="bg-dark text-white p-2">
+          <h5 class="h5"><span class="text-left"> Készítette : Szabó Dominik     </span><span class="text-right">Forrás: <a href="https://www.tiszacipo.hu/">Tiszacipo.hu</a> és <a href="https://hu.wikipedia.org/wiki/Tisza_Cip%C5%91_Zrt">Wikipédia</a></span></h5>
         </footer>
     </div>
 </body>
